Update Gradle files